Until new APIs are added to JavaFX to match the ones at awt.Desktop, we should use the Java 9's exports flag to use com.sun.glass.ui package.