@@ -99,6 +99,7 @@
             </classpath>
             <compilerarg value="-Xmaxerrs"/><compilerarg value="100"/>
             <compilerarg value="-Xplugin:threadchecker.TCPlugin org.reflections"/>
+            <compilerarg line="--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"/>
         </compile>
     	<copy todir="${boot.build}">
     	    <fileset dir="${boot.resources}" />
